--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {"no-console": 0}
   },
   "browserslist": [
     "> 1%",
